Swagger UI, Rest Assured, Content Negotiation, Validation, SB configuration & logging